Added comments and default data-message/comment-id in html

--- a/views/wall.html
+++ b/views/wall.html
@@ -80,7 +80,7 @@
         <!-- To be clone -->
         <ul class="hide">
             <!-- Message Template -->
-            <li class="message hide" id="message_template">
+            <li class="message hide" id="message_template" data-message-id="0">
                 <div class="message_content">
                     <p>Message Content</p>
                     <div class="message_actions">
@@ -116,7 +116,7 @@
                 </div>
             </li>
             <!-- Comment Template -->
-            <li class="message hide" id="comment_template">
+            <li class="message hide" id="comment_template" data-comment-id="0">
                 <div class="message_content">
                     <p>Message Content</p>
                     <div class="message_actions">
